--- a/info_pages/templates/about.html
+++ b/info_pages/templates/about.html
@@ -26,9 +26,9 @@
     <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="{% static 'css/vendor/vendor.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/plugins/plugins.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.min.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{ static 'css/vendor/vendor.min.css' %}" />
+    <link rel="stylesheet" href="{ static 'css/plugins/plugins.min.css' %}" />
+    <link rel="stylesheet" href="{ static 'css/style.min.css' %}"> -->
 
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -107,8 +107,7 @@
                 <div class="col-12">
                     <div class="section-title text-center">
                         <h2 class="title line-height-1">Team Member</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut labore
-                            et dolore magna aliqua. </p>
+                        <p>Meet the best team in the world that works every day to make better products for You. </p>
                     </div>
                 </div>
             </div>
