--- a/blog/templates/blog-search.html
+++ b/blog/templates/blog-search.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="robots" content="index, follow" />
-    <title>Mioca - Handmade Goods eCommerce HTML Template</title>
+    <title>Our Blogs</title>
     <meta name="description" content="Mioca - Handmade Goods eCommerce HTML Template" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
@@ -34,7 +34,21 @@
 <body>
 
     {% include 'includes/header.html' %}
-
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">Our Blogs</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item active">Blog List</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Blog Area Start -->
     <div class="blog-grid pb-100px pt-100px main-blog-page single-blog-page">
         <div class="container">
@@ -42,7 +56,7 @@
                 <div class="col-lg-12">
                     <div class="row mb-n-50">
                         {% for blog in blog_window.blogs.all %}
-                            <div class="col-lg-6 col-md-6 mb-50px">
+                            <div class="col-lg-4 col-md-4 mb-50px">
                                 <div class="single-blog">
                                     <div class="blog-image">
                                         <a href="{% url 'blog_detail' blog.id %}">
@@ -57,7 +71,6 @@
                                         <h5 class="blog-heading">
                                             <a class="blog-heading-link" href="{% url 'blog_detail' blog.id %}">{{ blog.title }}</a>
                                         </h5>
-                                        <p>{{ blog.blog_text_2 }}</p>
                                         <a href="{% url 'blog_detail' blog.id %}" class="btn btn-primary blog-btn"> Read More</a>
                                     </div>
                                 </div>
