--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -20,6 +20,21 @@
 
 <body>
     {% include 'includes/header.html' %}
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">Cart</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item active">Cart</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="cart-main-area pt-100px pb-100px">
         <div class="container">
@@ -56,7 +71,11 @@
                                         <a href="#">{{ item.product.name }}</a>
                                     </td>
                                     <td class="product-price-cart">
-                                        <span class="amount">${{ item.product.price }}</span>
+                                        {% if item.product.discount_price %}
+                                            <span class="amount discounted">${{ item.product.discount_price }}</span>
+                                        {% else %}
+                                            <span class="amount">${{ item.product.price }}</span>
+                                        {% endif %}
                                     </td>
                                     <td class="product-quantity">
                                         <span>{{ item.quantity }}</span>
@@ -74,13 +93,23 @@
                         </tbody>
                     </table>
                 </div>
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="cart-shiping-update-wrapper">
+                            <div class="cart-shiping-update">
+                                <a href="{% url 'shop' %}">Continue Shopping</a>
+                            </div>
+                            <div class="cart-clear">
+                                <a href="{% url 'clear_cart' %}">Clear Shopping Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-12 mt-md-30px">
                     <div class="grand-totall">
                         <div class="title-wrap">
-                            <h4 class="cart-bottom-title section-bg-gary-cart">Cart Total</h4>
+                            <h4 class="cart-bottom-title section-bg-gary-cart" style='margin-bottom: 20px'>Cart Total</h4>
                         </div>
-                        <h5>Total products <span>${{ total_price|floatformat:2 }}</span></h5>
-
                         <h4 class="grand-totall-title">Grand Total <span>${{ total_price|floatformat:2 }}</span></h4>
 
                         <a href="{% url 'checkout' %}" class="proceed-to-checkout-btn">Proceed to Checkout</a>
@@ -108,7 +137,6 @@
 
     {% include 'includes/footer.html' %}
 
-    <!-- Подключаем необходимые скрипты -->
     <script src="{% static 'js/vendor/jquery-3.5.1.min.js' %}"></script>
     <script src="{% static 'js/vendor/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/vendor/jquery-migrate-3.3.0.min.js' %}"></script>
