--- a/home/templates/slider.html
+++ b/home/templates/slider.html
@@ -25,7 +25,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 d-flex justify-content-center position-relative">
                             <div class="show-case">
                                 <div class="hero-slide-image">
-                                    <img src="{{ product.photo.url }}" alt="{{ product.name }}" />
+                                    <img src="{{ product.photo.url }}" alt="{{ product.name }}" style="width: 400px; height: 400px; object-fit: contain;" />
                                 </div>
                             </div>
                         </div>
