--- a/info_pages/templates/faq.html
+++ b/info_pages/templates/faq.html
@@ -40,23 +40,21 @@
 
     {% include 'includes/header.html' %}
 
-    <!-- breadcrumb-area start -->
     <div class="breadcrumb-area">
         <div class="container">
             <div class="row align-items-center justify-content-center">
                 <div class="col-12 text-center">
-                    <h2 class="breadcrumb-title">Faq</h2>
+                    <h2 class="breadcrumb-title">FAQ</h2>
                     <!-- breadcrumb-list start -->
                     <ul class="breadcrumb-list">
-                        <li class="breadcrumb-item"><a href="../home/templates/index.html">Home</a></li>
-                        <li class="breadcrumb-item active">Faq</li>
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item active">FAQ</li>
                     </ul>
                     <!-- breadcrumb-list end -->
                 </div>
             </div>
         </div>
     </div>
-    <!-- breadcrumb-area end -->
 
 
 
