--- a/info_pages/templates/privacy-policy.html
+++ b/info_pages/templates/privacy-policy.html
@@ -36,10 +36,23 @@
 </head>
 
 <body>
-
-
     {% include 'includes/header.html' %}
 
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">Privacy Policy</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item active">Privacy Policy</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
     <!--Privacy Policy area start-->
     <div class="privacy_policy_main_area pb-100px pt-100px">
         <div class="container">
