--- a/payments/templates/thank-you-page.html
+++ b/payments/templates/thank-you-page.html
@@ -27,9 +27,9 @@
     <link rel="stylesheet" href="{% static 'css/plugins/venobox.css' %}" />
 
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
-    <!-- <link rel="stylesheet" href="{% static 'css/vendor/vendor.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/plugins/plugins.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.min.css' %}"> -->
+    <!-- <link rel="stylesheet" href="{ static 'css/vendor/vendor.min.css' %}" />
+    <link rel="stylesheet" href="{ static 'css/plugins/plugins.min.css' %}" />
+    <link rel="stylesheet" href="{ static 'css/style.min.css' %}"> -->
 
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -48,11 +48,11 @@
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-8">
                     <div class="inner_complated">
-                        <div class="img_cmpted"><img src="{% static 'images/icons/cmpted_logo.png' %}" alt=""></div>
+                        <div class="img_cmpted"><img src="{{ thank_you.image.url }}" alt=""></div>
                         <p class="dsc_cmpted">Thank you for ordering in our store. You will receive a confirmation
                             email shortly.</p>
-                        <div class="btn_cmpted">
-                            <a href="../../product/templates/shop.html" class="shop-btn" title="Go To Shop">Continue Shopping </a>
+                        <div class="btn_cmpted" style="margin-bottom: 50px;">
+                            <a href="{% url 'shop' %}" class="shop-btn" title="Go To Shop">Continue Shopping </a>
                         </div>
                     </div>
                 </div>
