--- a/product/templates/shop.html
+++ b/product/templates/shop.html
@@ -33,19 +33,33 @@
 
 <body>
     {% include 'includes/header.html' %}
-
-    <div class="container">
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">Shop</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item active">Shop</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="margin-top: 50px;">
         <div class="row">
             <!-- Products Area Start -->
-            <div class="col-lg-9 col-md-12">
+            <div class="col-lg-9 col-md-12 " style="margin-top: 30px;">
                 <div class="shop-product-wrap grid-view row mb-30">
                     {% for product in products %}
                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 mb-30px" data-aos="fade-up" data-aos-delay="200">
                         <div class="product">
                             <div class="thumb">
                                 <a href="{% url 'product_detail' product.id %}" class="image">
-                                    <img src="{{ product.photo }}" alt="{{ product.name }}" />
-                                    <img class="hover-image" src="{{ product.photo }}" alt="{{ product.name }}" />
+                                    <img src="{{ MEDIA_URL }}{{ product.photo.url }}" alt="{{ product.name }}" />
+                                    <img class="hover-image" src="{{ MEDIA_URL }}{{ product.photo.url }}" alt="{{ product.name }}" />
                                 </a>
                                 {% if product.discount_price %}
                                 <span class="badges">
@@ -56,7 +70,6 @@
                                 <!-- Actions -->
                                 <div class="actions">
                                     <a href="{% url 'add_to_wishlist' product.id %}" class="action wishlist" title="Wishlist"><i class="pe-7s-like"></i></a>
-                                    <a href="{% url 'add_to_compare' product.id %}" class="action compare" title="Compare"><i class="pe-7s-refresh-2"></i></a>
                                 </div>
                             </div>
 
