--- a/product/templates/single-product.html
+++ b/product/templates/single-product.html
@@ -32,27 +32,34 @@
 
 <body>
     {% include "includes/header.html" %}
-
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">{{ product.name }}</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'shop' %}">Shop</a></li>
+                        <li class="breadcrumb-item active">{{ product.name }}</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Product Details Area Start -->
     <div class="product-details-area pt-100px pb-100px">
         <div class="container">
             <div class="row">
                 <!-- Product Images Start -->
-                <div class="col-lg-6 col-sm-12 col-xs-12 mb-lm-30px mb-md-30px mb-sm-30px">
-                    <div class="product-details-img product-details-tab product-details-tab-2 d-flex">
-                        <div class="swiper-container mr-15px zoom-thumbs-2 align-self-start">
-                            <div class="swiper-wrapper">
-                                {% for image in images %}
-                                    <div class="swiper-slide">
-                                        <img class="img-responsive m-auto" src="{{ image.image.url }}" alt="{{ product.name }}">
-                                    </div>
-                                {% endfor %}
-                            </div>
-                        </div>
+                <div class="col-lg-6">
+                    <div class="product-details-img-custom" style="margin-left: 210px">
+                        <a href="{% url 'product_detail' product.id %}" class="image">
+                            <img class="img-responsive m-auto" src="{{ MEDIA_URL }}{{ product.photo.url }}" alt="{{ product.name }}" />
+                        </a>
                     </div>
                 </div>
-                <!-- Product Images End -->
-
                 <!-- Product Info Start -->
                 <div class="col-lg-6 col-sm-12 col-xs-12" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-details-content quickview-content ml-25px">
@@ -142,7 +149,7 @@
                                                             {% for i in 0|range_filter:review.rating %}
                                                                 <i class="fa fa-star"></i>
                                                             {% endfor %}
-                                                            {% for i in review.rating|add:1|range_filter:5 %}
+                                                            {% for i in review.rating|add:1|range_filter:6 %}
                                                                 <i class="fa fa-star-o"></i>
                                                             {% endfor %}
                                                         </div>
@@ -219,32 +226,35 @@
                         <div class="product">
                             <div class="thumb">
                                 <a href="{% url 'product_detail' product.id %}" class="image">
-                                    <img src="{{ product.image.url }}" alt="{{ product.name }}" />
-                                    <img class="hover-image" src="{{ product.image.url }}" alt="{{ product.name }}" />
+                                    <img src="{{ MEDIA_URL }}{{ product.photo.url }}" alt="{{ product.name }}" />
                                 </a>
                                 <div class="actions">
-                                    <a href="{% url 'product_detail' product.id %}" class="action">
-                                        <i class="pe-7s-look"></i>
-                                    </a>
                                     <a href="{% url 'add_to_wishlist' product.id %}" class="action">
                                         <i class="pe-7s-like"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="content">
-                                <h3 class="title"><a href="{% url 'product_detail' product.id %}">{{ product.name }}</a></h3>
-                                <div class="pricing-meta">
-                                    <ul>
-                                        <li class="new-price">${{ product.price }}</li>
-                                    </ul>
-                                </div>
+                                <h5 class="title">
+                                    <a href="{% url 'product_detail' product.id %}">{{ product.name }}</a>
+                                </h5>
+                                <span class="price">
+                                    <span class="new">${{ product.final_price|floatformat:2 }}</span>
+                                    {% if product.discount_price %}
+                                    <span class="old">${{ product.price|floatformat:2 }}</span>
+                                    {% endif %}
+                                </span>
+                                <span class="ratings">
+                                    <span class="rating-wrap">
+                                        <span class="star" style="width: {{ product.average_rating_percent }}%"></span>
+                                    </span>
+                                    <span class="rating-num">({{ product.reviews.count }} Reviews)</span>
+                                </span>
                             </div>
                         </div>
                     </div>
                     {% endfor %}
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
             </div>
         </div>
     </div>
