--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -28,6 +28,23 @@
 <body>
     {% include 'includes/header.html' %}
 
+    <div class="breadcrumb-area">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 text-center">
+                    <h2 class="breadcrumb-title">Wishlist</h2>
+                    <!-- breadcrumb-list start -->
+                    <ul class="breadcrumb-list">
+                        <li class="breadcrumb-item"><a href="{% url 'home' %}">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'cart' %}">Cart</a></li>
+                        <li class="breadcrumb-item active">Wishlist</li>
+                    </ul>
+                    <!-- breadcrumb-list end -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Wishlist Area Start -->
     <div class="cart-main-area pt-100px pb-100px">
         <div class="container">
@@ -74,6 +91,15 @@
                                     {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="cart-shiping-update-wrapper">
+                                    <div class="cart-shiping-update">
+                                        <a href="{% url 'shop' %}">Continue Shopping</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </form>
                 </div>
