--- a/info_pages/templates/404.html
+++ b/info_pages/templates/404.html
@@ -48,7 +48,7 @@
                     <div class="page-not-found text-center">
                         <h2>Oops!</h2>
                         <p>Sorry,Page Not Found.</p>
-                        <a href="../../home/templates/index.html">Back To Home <i class="fa fa-home"></i></a>
+                        <a href="{% url 'home' %}">Back To Home <i class="fa fa-home"></i></a>
                     </div>
                 </div>
             </div>
