--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9339,3 +9339,29 @@ Pages - My Account
     border-radius: 0;
   }
 }
+
+.submit-order {
+  background-color: #eaaa85;
+  color: #fff;
+  display: block;
+  font-weight: 500;
+  letter-spacing: 1px;
+  line-height: 1;
+  padding: 18px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  border-radius: 0px;
+  z-index: 9;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  font-size: 14px;
+  max-width: 100%;
+  margin-top: 5px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.submit-order:hover {
+  background-color: #000;
+  color: #fff;
+}
