--- a/info_pages/templates/404.html
+++ b/info_pages/templates/404.html
@@ -28,7 +28,7 @@
     <!-- Use the minified version files listed below for better performance and remove the files listed above -->
     <link rel="stylesheet" href="{% static 'css/vendor/vendor.min.css' %}" />
     <link rel="stylesheet" href="{% static 'css/plugins/plugins.min.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/style.min.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/style.min.css' %}">
     
     <!-- Main Style -->
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -76,7 +76,6 @@
     <script src="{% static 'js/plugins/venobox.min.js' %}"></script>
     <script src="{% static 'js/plugins/ajax-mail.js' %}"></script>
     
-    <!-- Use the minified version files listed below for better performance and remove the files listed above -->
     <script src="{% static 'js/vendor/vendor.min.js' %}"></script>
 </body>
 
